--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -3,6 +3,52 @@
   hosts: all
   roles:
     - role: phreddrick.user-homedir
+  tasks:
+    - name: Stat all dotfiles created
+      stat:
+        path: "/home/tryme/.{{ item }}"
+      with_items:
+        - bash_colors
+        - bash_gitprompt
+        - bash_profile
+        - gitk
+        - screenrc
+        - bashrc
+        - gitconfig
+      register: check_dotfiles
+
+    - name: "explicitly fail if dotfile doesn't exist"
+      fail:
+        msg: "{{ item.stat.path }} does not exist, but should"
+      with_items: "{{ check_dotfiles.results }}"
+      when: not item.stat.exists or item.stat.pw_name != 'tryme' or item.stat.gr_name != 'tryme'
+
+    - name: Stat all backup exclude files
+      stat:
+        path: "/home/tryme/configs/backups/{{ item }}"
+      with_items:
+        - excludeHome
+      register: check_backups
+
+    - name: "explicitly fail if backups file doesn't exist"
+      fail:
+        msg: "{{ item.stat.path }} does not exist, but should"
+      with_items: "{{ check_backups.results }}"
+      when: not item.stat.exists or item.stat.pw_name != 'tryme' or item.stat.gr_name != 'tryme'
+
+    - name: Stat all scripts files
+      stat:
+        path: "/home/tryme/configs/scripts/{{ item }}"
+      with_items:
+        - genSHA512passHash
+      register: check_scripts
+
+    - name: "explicitly fail if scripts file doesn't exist"
+      fail:
+        msg: "{{ item.stat.path }} does not exist, but should"
+      with_items: "{{ check_scripts.results }}"
+      when: not item.stat.exists or item.stat.pw_name != 'tryme' or item.stat.gr_name != 'tryme'
+
 - name: Converge Go
   hosts: golang
   roles:
