Updated to use latest molecule container, and changed tests to use prebuilt container images instead of building them

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -31,4 +31,4 @@ location_bashrc: home
 # Name of molecule image to use in molecule function so we can easily run
 # molecule from the docker container without having a long complicated command
 # line.
-molecule_image: retr0h/molecule:latest
+molecule_image: quay.io/ansible/molecule:latest
