--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -6,34 +6,85 @@ driver:
 lint:
   name: yamllint
 platforms:
+  - name: user_homedir_centos8
+    image: "phreddrick/docker-centos8-ansible:latest"
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: true
+    pre_build_image: true
   - name: user_homedir_centos7
-    image: centos:7
+    image: "phreddrick/docker-centos7-ansible:latest"
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: true
+    pre_build_image: true
   - name: golang_user_homedir_centos7
-    image: centos:7
+    image: "phreddrick/docker-centos7-ansible:latest"
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: true
+    pre_build_image: true
     groups:
       - golang
   - name: user_homedir_ubuntu1804
-    image: ubuntu:18.04
+    image: "phreddrick/docker-ubuntu1804-ansible:latest"
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: true
+    pre_build_image: true
   - name: golang_user_homedir_ubuntu1804
-    image: ubuntu:18.04
+    image: "phreddrick/docker-ubuntu1804-ansible:latest"
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: true
+    pre_build_image: true
     groups:
       - golang
   - name: user_homedir_ubuntu1604
-    image: ubuntu:16.04
-  - name: user_homedir_ubuntu1404
-    image: ubuntu:14.04
+    image: "phreddrick/docker-ubuntu1604-ansible:latest"
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: true
+    pre_build_image: true
   - name: user_homedir_debianjessie
-    image: debian:jessie
+    image: "phreddrick/docker-debian8-ansible:latest"
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: true
+    pre_build_image: true
   - name: user_homedir_debianstretch
-    image: debian:stretch
+    image: "phreddrick/docker-debian9-ansible:latest"
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: true
+    pre_build_image: true
   - name: user_homedir_debianbuster
-    image: debian:buster
-  - name: user_homedir_debianbullseye
-    image: debian:bullseye
+    image: "phreddrick/docker-debian10-ansible:latest"
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: true
+    pre_build_image: true
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
+  inventory:
+    host_vars:
+      user_homedir_centos8:
+        ansible_python_interpreter: /usr/bin/python3
+      user_homedir_ubuntu1804:
+        ansible_python_interpreter: /usr/bin/python3
+      golang_user_homedir_ubuntu1804:
+        ansible_python_interpreter: /usr/bin/python3
 scenario:
   name: default
 verifier:
