Changed to append to groups, so we don't reset to less groups on subsequent runs

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -31,6 +31,7 @@
     groups: "{{ grps }}"
     shell: /bin/bash
     password: "{{ user.password }}"
+    append: true
   when: create_account
 
 - name: "Make sure user {{ user.name }} exists"
