--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,8 +3,12 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint:
-  name: yamllint
+lint: |
+    set -e
+    yamllint .
+    ansible-lint
+# lint:
+#   name: yamllint
 platforms:
   - name: user_homedir_centos8
     image: "geerlingguy/docker-centos8-ansible:latest"
@@ -100,10 +104,8 @@ platforms:
     pre_build_image: true
 provisioner:
   name: ansible
-  lint: |
-    set -e
-    yamllint .
-    ansible-lint
+  # lint:
+  #   name: ansible-lint
   inventory:
     host_vars:
       user_homedir_centos8:
