--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -31,5 +31,5 @@ location_bashrc: home
 # Name of molecule image to use in molecule function so we can easily run
 # molecule from the docker container without having a long complicated command
 # line.
-molecule_image: quay.io/ansible/molecule:latest
-molecule3_image: quay.io/ansible/molecule:3.0.8
+molecule_image: quay.io/ansible/toolset:latest
+molecule3_image: quay.io/ansible/toolset:latest
