--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -2,131 +2,19 @@
 dependency:
   name: galaxy
   options:
-    role-file: molecule/resources/requirements.yml
+     role-file: molecule/resources/requirements.yml
 driver:
   name: docker
 platforms:
-  - name: user_homedir_centos8
-    image: "geerlingguy/docker-centos8-ansible:latest"
+  - name: "user_homedir_${MOLECULE_DISTRO:-centos7}"
+    image: "geerlingguy/docker-${MOLECULE_DISTRO:-centos7}-ansible:latest"
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     privileged: true
     pre_build_image: true
-  - name: golang_user_homedir_centos8
-    image: "geerlingguy/docker-centos8-ansible:latest"
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    privileged: true
-    pre_build_image: true
-    groups:
-      - golang
-  - name: user_homedir_centos7
-    image: "geerlingguy/docker-centos7-ansible:latest"
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    privileged: true
-    pre_build_image: true
-  - name: golang_user_homedir_centos7
-    image: "geerlingguy/docker-centos7-ansible:latest"
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    privileged: true
-    pre_build_image: true
-    groups:
-      - golang
-  - name: user_homedir_ubuntu2004
-    image: "geerlingguy/docker-ubuntu2004-ansible:latest"
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    privileged: true
-    pre_build_image: true
-  - name: golang_user_homedir_ubuntu2004
-    image: "geerlingguy/docker-ubuntu2004-ansible:latest"
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    privileged: true
-    pre_build_image: true
-    groups:
-      - golang
-  - name: user_homedir_ubuntu1804
-    image: "geerlingguy/docker-ubuntu1804-ansible:latest"
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    privileged: true
-    pre_build_image: true
-  - name: golang_user_homedir_ubuntu1804
-    image: "geerlingguy/docker-ubuntu1804-ansible:latest"
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    privileged: true
-    pre_build_image: true
-    groups:
-      - golang
-  - name: user_homedir_ubuntu1604
-    image: "geerlingguy/docker-ubuntu1604-ansible:latest"
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    privileged: true
-    pre_build_image: true
-  - name: golang_user_homedir_ubuntu1604
-    image: "geerlingguy/docker-ubuntu1604-ansible:latest"
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    privileged: true
-    pre_build_image: true
-    groups:
-      - golang
-  - name: user_homedir_debian8
-    image: "geerlingguy/docker-debian8-ansible:latest"
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    privileged: true
-    pre_build_image: true
-  - name: golang_user_homedir_debian8
-    image: "geerlingguy/docker-debian8-ansible:latest"
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    privileged: true
-    pre_build_image: true
-    groups:
-      - golang
-  - name: user_homedir_debian9
-    image: "geerlingguy/docker-debian9-ansible:latest"
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    privileged: true
-    pre_build_image: true
-  - name: golang_user_homedir_debian9
-    image: "geerlingguy/docker-debian9-ansible:latest"
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    privileged: true
-    pre_build_image: true
-    groups:
-      - golang
-  - name: user_homedir_debian10
-    image: "geerlingguy/docker-debian10-ansible:latest"
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    privileged: true
-    pre_build_image: true
-  - name: golang_user_homedir_debian10
-    image: "geerlingguy/docker-debian10-ansible:latest"
+  - name: "golang_user_homedir_${MOLECULE_DISTRO:-centos7}"
+    image: "geerlingguy/docker-${MOLECULE_DISTRO:-centos7}-ansible:latest"
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
