--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-# tasks file for user-homedir
+# tasks file for user_homedir
 - name: Include Ubuntu vars
   include_vars: ubuntu.yml
   when: ansible_os_family == "Debian"
